package com.xinqihd.sns.gameserver.proto;
//查找工会

option java_outer_classname = "XinqiBceGuildSearchMember"; 
message BceGuildSearchMember {
    /**
    * 0: 搜索公会内的成员
    * 1: 搜索所有的玩家，招聘到公会 
    */
    optional int32 action = 1 [default=0];
    optional string key = 2 [default = ""];      //搜索名
}
